[tool.poetry]
name = "mr"
version = "0.1.0"
description = "Get Merge Requests from gitlab"
authors = ["mobo"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
python-gitlab = "^3.11.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mr = "src.mr.main:run"
